[package]
name = "tessellation"
version = "0.8.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

description = "3d tessellation library."
repository = "https://github.com/hmeyer/tessellation"
readme = "README.md"
keywords = ["tessellation", "3d", "manifold", "dual-contouring"]
license = "Apache-2.0 OR MIT"

[lib]
name = "tessellation"
path = "src/lib.rs"

[features]
default = []
# Adds support for exporting the mesh as a Wavefront OBJ.
obj = []

[dependencies]
alga = "0.9"
nalgebra = "0.22"
rand = "0.7"
rayon = "1.5.0"
once_cell = "1.4"
bbox = "0.11"
num-traits = "0.2"
polyhedron-ops = { path = "../polyhedron-ops", optional = true }
smallvec = "1.5.0"

[dev-dependencies]
approx = "0.4.0"
bencher = "0.1.5"
implicit3d = "0.14.2"

[[bench]]
name = "tessellation"
path = "src/benches/tessellation.rs"
harness = false

[badges]
travis-ci = { repository = "hmeyer/tessellation", branch = "master" }
codecov = { repository = "hmeyer/tessellation", branch = "master", service = "github" }

[package.metadata.docs.rs]
features = ["obj", "polyhedron-ops"]
